aws_subnet.private.tf
resource "aws_subnet" "private" {
  count             = var.subnets
  vpc_id            = aws_vpc.main.id
  cidr_block        = local.private_cidrs[count.index]
  availability_zone = data.aws_availability_zones.available.names[count.index]

  tags = merge(
    tomap({ "Type" = "Private" }),
  tomap({ "Name" = "${upper(var.account_name)}-Private-${var.zone[count.index]}" }))
}
