aws_vpc.tf
resource "aws_vpc" "main" {
  cidr_block           = "${var.cidr}"
  enable_dns_support   = true
  enable_dns_hostnames = true

  tags = "${merge(var.common_tags,
   map("Name" , "${upper(var.account_name)}"))}"
}
