aws_network_acl.NetworkAclPublic.tf
resource "aws_network_acl" "networkaclpublic" {
  # checkov:skip=CKV2_AWS_1: NACLs use broad rules; security enforced at security group level
  vpc_id     = aws_vpc.main.id
  subnet_ids = aws_subnet.public.*.id

  egress {
    rule_no    = 100
    action     = "allow"
    cidr_block = "0.0.0.0/0"
    from_port  = 0
    to_port    = 0
    protocol   = "all"
  }

  ingress {
    rule_no    = 100
    action     = "allow"
    cidr_block = "0.0.0.0/0"
    from_port  = 0
    to_port    = 0
    protocol   = "all"
  }
}
